[tool.poetry]
name = "pickle-me-up"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
uvicorn = "^0.30.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
